--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <button type="submit" id="btn-tweet" class="btn-tweet">TWEET</button>
             <output id="cont-chars">120</output>
         </form>
+        <section id="tweets"></section>
     </main>
+    <script src="./js/app.js"></script>
 </body>
 </html>
